--- a/app/globals.css
+++ b/app/globals.css
@@ -36,3 +36,13 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
+/* Music player animated bars */
+@keyframes musicBar {
+  0% {
+    height: 20%;
+  }
+  100% {
+    height: 100%;
+  }
+}
